添加一些参数
Signed-off-by: ChenYunHey <1908166778@qq.com>

--- a/base.yaml
+++ b/base.yaml
@@ -1,42 +1,23 @@
 apiVersion: flink.apache.org/v1beta1
 kind: FlinkDeployment
 metadata:
-  name: flink-ck-13
-  namespace: lake-czads
+  name:
+  namespace:
 spec:
   flinkConfiguration:
-    containerized.taskmanager.env.LAKESOUL_CURRENT_DOMAIN: lake-czads
-    high-availability: org.apache.flink.kubernetes.highavailability.KubernetesHaServicesFactory
-    high-availability.storageDir: file:///flink-data/ha
     kubernetes.decorator.hadoop-conf-mount.enabled: 'false'
-    kubernetes.operator.checkpoint.trigger.grace-period: '30000'
     kubernetes.operator.jm-deployment-recovery.enabled: 'false'
     kubernetes.operator.job.restart.failed: 'false'
     kubernetes.operator.observer.progress-check.interval: 10 s
-    kubernetes.pod-template-file.jobmanager: /tmp/flink-podTemplate-flink-ck-01.yaml
-    kubernetes.pod-template-file.taskmanager: /tmp/flink-podTemplate-flink-ck-01.yaml
     restart-strategy: fixed-delay
     restart-strategy.fixed-delay.attempts: '3'
     restart-strategy.fixed-delay.delay: 10 s
-    state.checkpoints.dir: file:///flink-data/checkpoints
-    state.savepoints.dir: file:///flink-data/savepoints
-    taskmanager.memory.process.size: 2048m
-    taskmanager.memory.task.off-heap.size: 128m
-    taskmanager.numberOfTaskSlots: '2'
   flinkVersion: v1_17
   image: sealos.hub:5000/flink-benchmark:1.5
   job:
     args:
-    - --job.checkpoint_interval
-    - '30000'
-    - --language
-    - sql
-    - --sql_file_path
-    - hdfs:///lakesoul-bucket/data_dev_tmp/lake-czads/flink-ck-01.txt
-    - --flink.checkpoint
-    - hdfs:///lakesoul-bucket/checkpoint/lake-czads/flink-ck-15
-    entryClass: org.apache.flink.lakesoul.entry.sql.SubmitMain
-    jarURI: local:///opt/flink/artifacts/lakesoul-flink-1.17-2.5.3.jar
+    entryClass:
+    jarURI:
     parallelism: 2
     state: running
     upgradeMode: last-state
@@ -82,7 +63,7 @@ spec:
             path: core-site.xml
           name: flink-configmap
         name: hadoop-config
-  serviceAccount: lake-iam-001
+  serviceAccount:
   taskManager:
     resource:
       cpu: 1
